rollbacked swagger.yml and index.js
