# src/routes/createPost.js
@@ -1,5 +1,5 @@
 export const routes = (router) => {
-  router.post('/create-post', async (ctx) => {
+  router.post('/posts/create', async (ctx) => {
     ctx.type = 'application/json';
     ctx.body = ctx.request.body
     ctx.status = 200;
